--- a/cartridges/org_organizationid_mfra/cartridge/client/default/scss/bootstrapOverrides/_reboot.scss
+++ b/cartridges/org_organizationid_mfra/cartridge/client/default/scss/bootstrapOverrides/_reboot.scss
@@ -11,10 +11,21 @@ html {
 body {
     margin: 0; // 1
     font-family: $font-family-base;
-    font-size: $font-size-body; // bootstrap override
+    font-size: $font-size-base; // bootstrap override
     font-weight: $font-weight-base;
     line-height: $line-height-base;
     color: $body-color;
     text-align: left; // 3
     background-color: $body-bg; // 2
+}
+
+form {
+    font-size: $font-size-body;
+}
+
+label {
+    // Allow labels to use `margin` for spacing.
+    display: inline-block;
+    margin-bottom: 0.25rem;
+    font-weight: $font-weight-bold; //bootstrap override
 }
