--- a/cartridges/site_siteid_mfra/cartridge/client/default/scss/styleGuide.scss
+++ b/cartridges/site_siteid_mfra/cartridge/client/default/scss/styleGuide.scss
@@ -1,6 +1,8 @@
 @import "~org/variables";
 @import "bootstrap/scss/bootstrap";
-@import "~org/bootstrapOverrides";
+@import "~org/bootstrapOverrides/buttons";
+@import "~org/bootstrapOverrides/forms";
+@import "~org/bootstrapOverrides/reboot";
 
 .pt_styleguide {
     .wrapper {
@@ -101,6 +103,12 @@
             .btn {
                 margin-right: 2em;
             }
+        }
+    }
+
+    .sg-forms {
+        @include media-breakpoint-up(md) {
+            width: 25%;
         }
     }
 }
